Fix forhandsorientering (#515)
* Fix fho duplikatproblem

* Add extra tests for avtalt-med-nav

* Add message-field to error-responses

* Fix fho duplikatproblem

Co-authored-by: Hans Petter Simonsen <hans.petter.simonsen@nav.no>